# dart-server

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  benchmark.sh  benchmark.txt  civetweb.dockerfile  csharp.dockerfile  go.dockerfile  hello_handler.c  main.go  node.dockerfile  package.json  pubspec.yaml  server.js  shelf.dockerfile
SimpleApp/: SimpleApp.csproj
example/shelf/: pubspec.yaml
lib/: server.dart
lib/src/api/: handler.dart  request.dart  serve.dart
lib/src/isolates/: isolated_server.dart  isolated_worker.dart
lib/src/util/: shared_dylib.dart
test/: benchmark_test.dart  test.dart
